# bot-minecraft-status

./: .env.template  .gitignore  README.md  mc_cron_notify.py  pyproject.toml  run.sh
.github/workflows/: deploy.yml
