[project]
name = "bot-minecraft-status"
version = "0.1.0"
description = "A cron job Discord bot that checks the status of a Minecraft server and updates its status in a Discord channel."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Theo Declerck", email = "theo.dclrck5@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "mcstatus>=12.0.5",
    "requests>=2.32.5"
]

[tool.uv]
